package messages;

option java_package = "com.nwchecker.server.utils.messages";
option java_outer_classname = "CheckerMessageProto";

message CheckerMessage{
	required int32 compilerId = 1;
	required bytes userSolution = 2;
	message DataPair{
		required bytes inputData = 1;
		required bytes outputData = 2;
	}
	repeated DataPair inOutData = 3;
}
