package messages;

option java_package = "com.nwchecker.server.utils.messages";
option java_outer_classname = "CheckerResponseProto";

message CheckerResponse{
	message AtomicResponse{
		required int32 success = 1;
		required int32 executionTime = 2;
		required int32 memoryUsed = 3;
	}
	repeated AtomicResponse testData = 1;
}
